Fix vertical alignment within header

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -42,6 +42,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: bold;
 }
 
